# boomerang

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  install_dep.sh
config/: config_local.json  config_multi_server.json
keys/: id_rsa_docker  id_rsa_docker.pub  id_rsa_host
scripts/: batch_process.py  id_rsa_host_setup.sh  run.py  run_bnode.sh  run_client.sh  run_enode.sh  run_test.py  run_test_bnode.sh  run_test_client.sh
src/: CMakeLists.txt
src/bnode/: CMakeLists.txt
src/bnode/App/: main.cpp
src/bnode/Enclave/: Enclave.config.xml  Enclave.edl  Enclave_private.pem  ecall.cpp  utils_t.cpp
src/client/: CMakeLists.txt
src/client/App/: cryptolib.cpp  cryptolib.h  main.cpp
src/common/: CMakeLists.txt  boomerang.proto  ds.hpp  sgx.hpp  utils.hpp
src/enode/: CMakeLists.txt
src/enode/App/: main.cpp
src/enode/Enclave/: Enclave.config.xml  Enclave.edl  cryptolib.cpp  cryptolib.h  ecall.cpp  utils_t.cpp
src/test_bnode/: CMakeLists.txt
src/test_bnode/App/: main.cpp
src/test_bnode/Enclave/: Enclave.config.xml  Enclave.edl  ecall.cpp  utils_t.h
src/test_client/: CMakeLists.txt
src/test_client/App/: cryptolib.cpp  cryptolib.h  main.cpp
